--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon src/index.js",
+	"name": "server",
+	"version": "1.0.0",
+	"main": "index.js",
+	"description": "Galaxy-Community(backend)",
+	"scripts": {
+		"start": "nodemon src/index.js",
 		"eslint": "eslint --fix --max-warnings=0",
 		"prettier": "prettier --write **/*.js"
-  },
-  "dependencies": {
+	},
+	"dependencies": {
 		"body-parser": "^1.20.2",
 		"crypto": "^1.0.1",
 		"express": "^4.18.2",
@@ -30,7 +30,7 @@
 			"npm run eslint"
 		]
 	},
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+	"keywords": [],
+	"author": "",
+	"license": "ISC"
 }
