--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
-    "husky": "^9.0.11"
+    "husky": "^9.0.11",
+    "prettier": "^3.3.3"
   }
 }
