refactor：目录结构变化

--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
 	"type": "module",
 	"description": "Galaxy-Community(frontend)",
 	"scripts": {
-		"dev": "vite",
+		"start": "vite",
 		"build": "tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview",
