--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -29,5 +29,6 @@
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src"]
+  "include": ["src","./**/*.ts"],
+  "exclude": ["node_modules/**/*"]
 }
